@startuml
class msg_file_subscription_registry {
}

class msg_file_output_port {

}

class msg_file_subscription {
}

class port_activity_subscriber_ref {
}

class bound_member_function {
	+operator()(): void
	-handle: void*
}

enum msg_file_input_port_status {
	ready
	busy
}

msg_file_output_port --{ msg_file_subscription
msg_file_output_port *-- bound_member_function
msg_file_subscription_registry --{ msg_file_output_port
msg_file_subscription *-- msg_file_input_port_status
port_activity_subscriber_ref --{ msg_file_subscription
@enduml

@startuml
actor Producer
collections Consumers
entity msg_file_subscription_registry
collections msg_file_output_ports

== Client is ready ==
Consumers -> msg_file_subscription_registry:notify_client_ready(subscription_id, consumer)
note over msg_file_subscription_registry
	Find subscription given subscription_id and consumer
end note
alt subscription state is busy
	note over msg_file_subscription_registry
		Set subscription state to ready
	end note
	msg_file_subscription_registry -> msg_file_output_ports:dec_num_busy_clients
	opt num_busy_clients == 0
		activate msg_file_output_ports
		msg_file_output_ports -> Producer:submit_result
== Data is ready ==
		deactivate msg_file_output_ports
		activate Producer
		Producer -> msg_file_subscription_registry:notify_data_ready(port_id)
		deactivate Producer
		note over msg_file_subscription_registry
			Map port_id to subscriptions
		end note
		loop over matching subsciptions
			msg_file_subscription_registry -> Consumers:notify_data_ready(subscription_id)
			note over msg_file_subscription_registry
				Set subscription state to busy
			end note
			msg_file_subscription_registry -> msg_file_output_ports:inc_num_busy_clients
		end loop
	end opt
else
end alt
@endml

@startuml
actor Producer
actor Consumer
entity msg_file_subscription_registry
collections msg_file_output_port
Consumer -> msg_file_subscription_registry:add_port_activity_subscription(port_name, subscriber)
note over msg_file_subscription_registry
	Map port name to port
end note
alt port found
	msg_file_subscription_registry -> msg_file_output_port:submit_results_if_clients_ready
	activate msg_file_output_port
	opt num_busy_clients == 0
		msg_file_output_port -> Producer:submit_result
		deactivate msg_file_output_port
		activate Producer
	end opt
	msg_file_subscription_registry->Consumer:subscription_id
end
@enduml